--- a/_directory/data/M202-506500/data.yml
+++ b/_directory/data/M202-506500/data.yml
@@ -6,19 +6,19 @@ name: 40/273-506500
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
 # možete koristiti T7D za transformaciju HTRS96/TM koordinata iz ENH u DEG oblik (https://t7d.dgu.hr/)
-latitude: 45.33646599384898
-longitude: 15.371580682526643
+latitude: 45.3365240376097
+longitude: 15.3717300304929
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 1000
-kooN: 1000
-kooH: 192
-kooH1875: 192.4616
+kooE: 411570.678
+kooN: 5022461.071
+kooH: 192.15
+kooH1875: 192.4616 (upitan visina)
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Na temelju ulaznog signala sa lijeve strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
+opis: "Reper u temelju stupa KM-a br. 36 sa desne strane pruge. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
@@ -28,7 +28,7 @@ image: 40-273.jpg
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 
+image2: 20210707_102720.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
