--- a/_directory/data/M202-505605/data.yml
+++ b/_directory/data/M202-505605/data.yml
@@ -1,24 +1,24 @@
 ---
 # ime (obavezno)
 # može biti ime ili broj točke
-name: MIIIb-505600
+name: MIII-505600
 
 # koordinate (obavezno)
 # koordinate trebaju imati barem 4 decimale za što bolji prikaz
 # možete koristiti T7D za transformaciju HTRS96/TM koordinata iz ENH u DEG oblik (https://t7d.dgu.hr/)
-latitude: 45.3433624900359
-longitude: 15.3766624368811
+latitude: 45.34338020395952
+longitude: 15.376734348949647
 
 # koordinate HTRS96/TM (obavezno)
-kooE: 411967.859
-kooN: 5023215.605
-kooH: 195
-kooH1875: 195.3409
+kooE: 411971.063
+kooN: 5023210.835
+kooH: 194
+kooH1875: 194.3709
 
 # opis
 # opišite lokaciju i stabilizaciju stalne točke geodetske osnove
 # najviše 300 znakova. bez ukrašavanja teksta i praznih redaka!
-opis: "Visoki reper (biljeg visine) na kolodvorskoj zgradi Generalski Stol. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
+opis: "Visoki reper na kolodvorskoj zgradi Generalski Stol. Mjerenja izvršena RTK metodom uz pomoć CROPOS-a u HTRS96/TM koordinatnom sustavu. Visina HVRS1875 određena tehničkim nivelmanom u odnosu na nivelmansku mrežu I. nivelmana visoke točnosti (Nivelmanski vlak br. 273)."
 
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
@@ -28,7 +28,7 @@ image: 20210707_112415.jpg
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: 20210707_112350.jpg
+image2: 20210707_112357.jpg
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
