--- a/_directory/data/M501-82283/data.yml
+++ b/_directory/data/M501-82283/data.yml
@@ -23,12 +23,12 @@ opis: "Ubetonirani željezni klin u parapet propusta s lijeve strane pruge. Mjer
 # fotografija
 # fotografija lokacije STGO iz trenutne mape (ike 'foto-lokacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image: stari_nacrt.JPG.jpg
+image: stari_nacrt.JPG
 
 # fotografija vrste stabilizacije
 # fotografija stabilizacije STGO iz trenutne mape (ike 'foto-stabilizacije.jpg')
 # treba biti kvadratnog oblika i približnih dimenzija 200-300 px!
-image2: stari_nacrt.JPG.jpg
+image2: stari_nacrt.JPG
 
 # linkovi
 # jedan ili više linkova na vašu web stranicu, github profil, twitter, facebook i sl.
